unpackaged/main/default/objects/Project_Task__c/Project_Task__c.object-meta.xml
<CustomObject>
    <description>This is for the Salesforce admin to track projects and changes in the system.</description>
    <label>Salesforce Admin Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Admin Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>