unpackaged/main/default/objects/Project_Task__c/fields/Assigned_Account__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Salesforce Admin Tasks</relationshipLabel>
    <relationshipName>Salesforce_Admin_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>