unpackaged/main/default/objects/Project_Task__c/fields/Catagory__c.field-meta.xml
<CustomField>
    <fullName>Catagory__c</fullName>
    <label>Catagory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>