unpackaged/main/default/objects/Project_Task__c/fields/Current_Hours_Development__c.field-meta.xml
<CustomField>
    <fullName>Current_Hours_Development__c</fullName>
    <label>Current Hours Development</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>