unpackaged/main/default/objects/Project_Task__c/fields/Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Difficulty__c</fullName>
    <label>Difficulty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easy ( &lt;4hours)</fullName>
            </value>
            <value>
                <fullName>Medium (1 day)</fullName>
            </value>
            <value>
                <fullName>Hard (Research, Or multiday)</fullName>
            </value>
            <value>
                <fullName>Integrator Help</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>