unpackaged/main/default/objects/Project_Task__c/fields/Parent_Task__c.field-meta.xml
<CustomField>
    <fullName>Parent_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Child Tasks</relationshipLabel>
    <relationshipName>Salesforce_Admin_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>