unpackaged/main/default/objects/Project_Task__c/fields/Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Priority_Level__c</fullName>
    <label>Priority Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Well_Tiers</valueSetName>
    </valueSet>
</CustomField>