unpackaged/main/default/objects/Project_Task__c/fields/Projected_Hours_Development__c.field-meta.xml
<CustomField>
    <fullName>Projected_Hours_Development__c</fullName>
    <description>Max Hours Projected for Development</description>
    <inlineHelpText>Max Hours Projected for Development</inlineHelpText>
    <label>Projected Hours Development</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>