unpackaged/main/default/objects/Project_Task__c/fields/User_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>User_Assigned_To__c</fullName>
    <formula>Assigned_To__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User=Assigned To</label>
    <type>Checkbox</type>
</CustomField>