unpackaged/main/default/objects/Project_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Catagory__c</columns>
    <columns>NAME</columns>
    <columns>Percent_Complete__c</columns>
    <columns>Priority_Level__c</columns>
    <columns>Description__c</columns>
    <columns>Target_Date__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Parent_Task__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>Derek Gomez</value>
    </filters>
    <label>All</label>
</ListView>