unpackaged/main/default/objects/Project_Task__c/listViews/Integrator_Projects.listView-meta.xml
<ListView>
    <fullName>Integrator_Projects</fullName>
    <columns>NAME</columns>
    <columns>Percent_Complete__c</columns>
    <columns>Priority_Level__c</columns>
    <columns>Target_Date__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Catagory__c</columns>
    <columns>Difficulty__c</columns>
    <columns>Description__c</columns>
    <columns>User__c</columns>
    <columns>Parent_Task__c</columns>
    <columns>Status__c</columns>
    <columns>Projected_Hours_Development__c</columns>
    <columns>Current_Hours_Development__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_Account__c</field>
        <operation>contains</operation>
        <value>opportune</value>
    </filters>
    <filters>
        <field>Target_Date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2022</value>
    </filters>
    <label>Opportune Projects</label>
</ListView>