unpackaged/main/default/objects/Project_Task__c/listViews/Open_Tasks.listView-meta.xml
<ListView>
    <fullName>Open_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Target_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started,In Progress</value>
    </filters>
    <label>Open Tasks</label>
</ListView>